--- a/Infortainment_Control/app/src/main/res/values/strings.xml
+++ b/Infortainment_Control/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="cable">Cable Box</string>
     <string name="premieres">Premieres</string>
     <string name="settings">Settings</string>
+    <string name="manufacturer_input_prompt">Manufacturer</string>
+    <string name="samsung">Samsung</string>
+    <string name="vizio">Vizio</string>
+    <string name="lg">LG</string>
+    <string name="sony">Sony</string>
 </resources>
+
+
