TV Layout Rough Draft

--- a/Infortainment_Control/app/src/main/res/values/strings.xml
+++ b/Infortainment_Control/app/src/main/res/values/strings.xml
@@ -14,8 +14,8 @@
     <string name="lg">LG</string>
     <string name="sony">Sony</string>
     <string name="comcast">Comcast</string>
-    <string name="specrum">Spectrum</string>
-    <string name="Massillon">Massillon</string>
+    <string name="spectrum">Spectrum</string>
+    <string name="massillon">Massillon</string>
 </resources>
 
 
