small resource reference change; mild cleanup of main app

--- a/Infortainment_Control/app/src/main/res/values/strings.xml
+++ b/Infortainment_Control/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="tv">TV</string>
+    <string name="dvd">DVD</string>
     <string name="cable">Cable Box</string>
     <string name="premieres">Premieres</string>
     <string name="settings">Settings</string>
